2012-08-12 Erwin Waterlander <waterlan@xs4all.nl>
	* Makefile: Don't use pod2text option --utf8. There are too many
	  old pod2text versions around that don't support this option.
	* po/eo*.po: Update Esperanto translations. Thanks to Rugxulo.

2012-08-10 Erwin Waterlander <waterlan@xs4all.nl>
	* Makefile: Change variable OS to D2U_OS. OS is used by Windows.
	* Makefile: By default install only English text and html manuals.
	  This saves a dependency on iconv. Non-English text and html manuals
	  will be installed when they have been explicitly generated with
	  targets 'txt' and 'html'.

2012-08-09 Erwin Waterlander <waterlan@xs4all.nl>
	* dos2unix/unix2dos: Use only C99 compliant predefined macros.

2012-08-07 Erwin Waterlander <waterlan@xs4all.nl>
	* dos2unix/unix2dos: Print line number when a binary symbol is found.
	  Thanks to Somsak Pattanaprateep.
	* Makefile: By default install text and html manuals of all languages.

2012-08-06 Erwin Waterlander <waterlan@xs4all.nl>
	* dos2unix/unix2dos: Fix. Locale encoding was not detected when NLS
	  was disabled.
	* common.c: Update comments. Surrogate halves in UTF-8 are invalid.

2012-07-25 Erwin Waterlander <waterlan@xs4all.nl>
	* Version 6.0.1

2012-07-20 Erwin Waterlander <waterlan@xs4all.nl>
	* Makefile: Target 'html' makes also Dutch and Spanish HTML manuals.

2012-07-18 Erwin Waterlander <waterlan@xs4all.nl>
	* manual: Update for options -n and -o. Describe the new permissions of
	  the output file in new-file and old-file mode.
	* README.txt: Added references for the findutils package for Windows
	  and DOS to enable recursive conversions on those platforms.

2012-05-20 Erwin Waterlander <waterlan@xs4all.nl>
	* common.h: Fix compiler warnings "implicit declaration of function
	  'strcasecmp'". Thanks to Michael Schindler
	  <k-m_schindler@sourceforge.net>.

2012-05-11 Julio A. Freyre-Gonzalez <jfreyreg@gmail.com>
	* Update Spanish messages and manual.

2012-05-06 Erwin Waterlander <waterlan@xs4all.nl>